fix(AA): Add padding on Booking block for readability

--- a/app/javascript/stylesheets/active_admin.scss
+++ b/app/javascript/stylesheets/active_admin.scss
@@ -23,3 +23,7 @@
 .is-pulled-left {
   float: left;
 }
+
+.booking-information {
+  padding-bottom: 10px;
+}
